workload/services/media-server/resources/radarr/statefulset-radarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      serviceAccountName: wait-for-job
      automountServiceAccountToken: false

      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: openebs.io/nodeid
                    operator: In
                    values:
                      - talos-o52-6k4

      restartPolicy: Always

      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.1.0@sha256:10f94c85f605d42e5e78de928f24758b5750a4e99eee8d0ef9ff150f7a2df033
          livenessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
              subPath: radarr
            - name: radarr-tmp
              mountPath: /tmp
          ports:
            - containerPort: 7878

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: media-server-config
        - name: data
          persistentVolumeClaim:
            claimName: media-server
        - name: radarr-tmp
          emptyDir: {}
        - name: sa-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  expirationSeconds: 600
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
              - downwardAPI:
                  items:
                    - path: namespace
                      fieldRef:
                        fieldPath: metadata.namespace
