workload/services/media-server/resources/radarr/ingress-radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sd
  name: radarr
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.lan.speziato.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.lan.speziato.dev
      secretName: radarr-tls
